fix the spacing and scroll issues related to recordset
- fix the spacing issues when the side panel is closed
- rename the filename to split-view for consistency with comp name.
- modify the implementation of split-view to use the same partner
  notion as AngularJS implementation instead of event passing.
  The event solution was laggy and didn't work properly for popups.
- proper scroll behavior on popups

--- a/src/assets/scss/_recordset.scss
+++ b/src/assets/scss/_recordset.scss
@@ -3,22 +3,20 @@
 
 .chaise-body {
   .recordset-container {
+    // customize the default width for recordset
     .top-panel-container {
       .top-flex-panel {
         .top-left-panel {
           &.open-panel {
             width: 21vw;
-            flex-basis: unset;
           }
         }
       }
     }
-
     .bottom-panel-container {
       .side-panel-resizable {
         &.open-panel {
           width: 21vw;
-          flex-basis: unset;
         }
       }
     }
@@ -131,18 +129,6 @@
         .recordset-main-search {
           min-width: 250px;
         }
-      }
-    }
-
-    .main-container {
-      flex: 1;
-      position: relative;
-      overflow-x: hidden;
-      overflow-y: auto;
-
-      // we're going to adjust this dynamically for dynamic-padding
-      &:not(.dynamic-padding) {
-        padding-right: $viewport-margin;
       }
     }
   }
